# everviz

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CONTRIBUTING.md  README.md  config.yml  example_data.csv  pyproject.toml  setup.py  test_requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish_to_pypi.yml  style.yml  testing.yml
docs/: conf.py  index.rst  installing_everviz.rst  introduction.rst  running_everviz.rst
everviz/: config.py  everest_hooks.py  log.py  util.py
everviz/assets/: axis_customization.css
everviz/components/: list_select.py
everviz/data/load_csv/: get_data.py
everviz/pages/: configuration.py  controls.py  crossplot.py  deltaplot.py  gradientplot.py  objectives.py  summary_values.py  wells_values.py
everviz/plugins/: __init__.py  gradient_plot.py  plugin_abc.py
everviz/plugins/best_controls_plot/: best_controls_plot.py
everviz/plugins/config_editor/: config_editor.py
everviz/plugins/controls_plot/: controls_plot.py
everviz/plugins/crossplot/: _get_indexed_control.py  crossplot.py  crossplot_indexed.py  set_up_assets.py
everviz/plugins/crossplot/callback/: crossplot_callback.py  crossplot_indexed_dropdown.py
everviz/plugins/crossplot/layout/: crossplot_layout.py
everviz/plugins/delta_plot/: delta_plot.py
everviz/plugins/lineplot/: lineplot.py  lineplot_dropdown_plugin.py  lineplot_plugin.py
everviz/plugins/lineplot/callback/: _lineplot_callback.py  lineplot_dropdown.py
everviz/plugins/lineplot/layout/: _lineplot_layout.py
everviz/plugins/objectives_plot/: objectives_plot.py  single_objectives_plot.py  util.py
everviz/plugins/summary_plot/: summary_callback.py  summary_plot.py  util.py  wells_plot.py
everviz/plugins/utils/layout/: sidebar_layout.py
tests/: conftest.py
tests/integration/config_editor/: test_config_editor.py
tests/integration/controls_plot/: test_controls_plot_integration.py
tests/integration/crossplot/: test_crossplot_indexed_integration.py  test_crossplot_integration.py
tests/integration/delta_plot/: test_objectives_delta_plot_integration.py  test_summary_delta_plot_integration.py
tests/integration/gradient_plot/: test_gradient_plot_integration.py
tests/integration/objectives_plot/: test_objectives_plot_integration.py
tests/integration/summary_plot/: test_summary_plot_integration.py  test_well_plot_integration.py
tests/unit/: test_control_plot_data.py  test_delta_plot_data.py  test_everviz_config.py  test_formatting.py  test_get_indexed_control.py  test_gradient_plot_data.py  test_hook_implementation.py  test_objective_plot_data.py  test_set_up_assets.py  test_single_objective_data.py  test_single_objective_plot_layout.py  test_summary_callback.py  test_summary_plot.py  test_util.py
tests/unit/crossplot/: test_callback.py  test_get_indexed_control.py  test_indexed_callback.py  test_indexed_crossplot_layout.py  test_layout.py
tests/unit/lineplot/: test_layout.py
