[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "everviz"
description = "Visualization for Everest"
authors = [
  {name = "Equinor ASA", email = "fg_sib-scout@equinor.com"},
]
license = {text = "AGPL-3.0"}
readme = "README.md"
classifiers = [
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = [
    "pyyaml",
    "pandas",
    "numpy",
    "dash>=2.0",
    "webviz-config>=0.2.0",
    "webviz-config-equinor",
    "plotly",
    "flask",
    "importlib_resources; python_version<'3.9'",
    "importlib_metadata",
]

[project.urls]
repository = "https://github.com/equinor/everviz"

[project.optional-dependencies]
test = [
    "dash[testing]",
    "pillow",
    "pytest-mock",
    "sphinx"
]
style = [
    "ruff",
    "pylint",
]

[project.entry-points."everest"]
everviz = "everviz.everest_hooks"
[project.entry-points."webviz_config_plugins"]
Crossplot = "everviz.plugins:Crossplot"
CrossplotIndexed = "everviz.plugins:CrossplotIndexed"
SummaryPlot = "everviz.plugins:SummaryPlot"
ObjectivesPlot = "everviz.plugins:ObjectivesPlot"
SingleObjectivesPlot = "everviz.plugins:SingleObjectivesPlot"
ControlsPlot = "everviz.plugins:ControlsPlot"
BestControlsPlot = "everviz.plugins:BestControlsPlot"
DeltaPlot = "everviz.plugins:DeltaPlot"
GradientPlot = "everviz.plugins:GradientPlot"
ConfigEditor = "everviz.plugins:ConfigEditor"
WellsPlot = "everviz.plugins:WellsPlot"

[tool.setuptools_scm]
write_to = "everviz/version.py"

[tool.setuptools.dynamic]
version = {attr = "everviz.version.__version__"}

[tool.ruff]
src = ["everviz"]
line-length = 88

[tool.ruff.lint]
select = [
  "W",  # pycodestyle
  "I",  # isort
  "B",  # flake-8-bugbear
  "SIM",  # flake-8-simplify
  "F",  # pyflakes
  "PL",  # pylint
  "NPY",  # numpy specific rules
  "C4",  # flake8-comprehensions
]
preview = true
ignore = ["PLW2901",  # redefined-loop-name
          "PLR2004",  # magic-value-comparison
          "PLR0915",  # too-many-statements
          "PLR0912",  # too-many-branches
          "PLR0911",  # too-many-return-statements
          "PLC2701",  # import-private-name
          "PLR6201",  # literal-membership
          "PLR0914",  # too-many-locals
          "PLR6301",  # no-self-use
          "PLW1641",  # eq-without-hash
          "PLR0904",  # too-many-public-methods
          "PLR1702",  # too-many-nested-blocks
          "PLW3201",  # bad-dunder-method-name
]

[tool.ruff.lint.pylint]
max-args = 10
